# xg2g

./: .claude-lessons-learned.md  .codex_patch.diff  .dev-setup  .dockerignore  .editorconfig  .env.example  .env.minimal  .env.prod  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  .golangci.yml  .golangci.yml.backup  .goreleaser.yml  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  .yamllint.yaml  8002_test.ts  AGENTS.md  ARCHITECTURE.md  BEAUTY_PASS_BASELINE.md  BRANCH_PROTECTION.md  BUILD.md  CHANGELOG.md  CHANGELOG_V3.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_COMPOSE_GUIDE.md  Dockerfile  Dockerfile.cross-arm64  Dockerfile.distroless  Dockerfile.ffmpeg-base  GREP_PROOF_FINAL.md  IMPLEMENTATION_SUCCESS.md  LICENSE  Makefile  (+99 more)
.claude/: launch.json  settings.local.json
.dev-notes/: startup-guide.md  tanstack-query-migration.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.githooks/: pre-commit
.github/: AUDIT_REPORT.md  BRANCH_POLICY.md  BRANCH_PROTECTION_CHECKLIST.md  CI_MIGRATION.md  CODEOWNERS  FUNDING.yml  ISSUES_AND_PR_PLAN.md  PR_BODY_PHASE_2D.md  README.md  RELEASE_NOTES_v1.5.0.md  TOPICS.md  WORKFLOWS.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml  release_checklist.md
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
api/: oapi-codegen-api.yaml  oapi-codegen-v3.yaml  openapi.yaml  openapi.yaml.snippet
backend/: .golangci.yml  .goreleaser.yml  BUILD.md  CHANGELOG_V3.md  NEW_HERE.md  OFFLINE_TEST.md  WORKFLOW.md  config.example.yaml  config.generated.example.yaml  go.mod  go.sum
branding/: README.md
config/: jaeger-sampling.json  xg2g.example-telemetry.yaml
contracts/: manifest.schema.json  telemetry.schema.json  ui_consumption.manifest.json
deploy/: PERFORMANCE_TUNING.md  README.md  REVERSE_PROXY.md  docker-compose.alpine.yml  docker-compose.distroless.yml  docker-compose.gpu.yml  docker-compose.nvidia.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  docker-compose.yml.pre-separate  k8s-alpine.yaml  k8s-distroless.yaml  runtime-sync.sh  sync.sh  systemd-timer.conf  xg2g.env.schema.yaml  xg2g.service
design/: v3_fsm.md  v3_roadmap.md  v3_vision.md
docs/: ADVANCED.md  API_HEALTH_CHECK.md  API_MIGRATION_GUIDE.md  API_V1_CONTRACT.md  ARCHITECTURE.md  AUDIO_DELAY_FIX.md  CHANGELOG.md  CI_CD_AUDIT_REPORT.md  CI_CONTRACT.md  CI_LOAD_TESTING.md  CLAUDE_INSTRUCTIONS.md  CONFIGURATION.md  CONFIGURATION_AUDIT.md  COVERAGE_OPERATIONS.md  COVERAGE_SETUP.md  DAEMON_REFACTORING_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPRECATION_POLICY.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  FFI_TESTING.md  GATE_DATA_PRODUCTION.md  HEALTH_CHECKS.md  HERMETICITY.md  HWACCEL_DETERMINISM.md  HWACCEL_PRODUCTION_READY.md  INTERNALS.md  (+78 more)
transcoder/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
transcoder/docs/: PHASE_5_CODE_EXAMPLES.md
transcoder/src/: audio_remux.rs  decoder.rs  demux.rs  encoder.rs  ffi.rs  ffi_test.rs  lib.rs  main.rs  main_simple.rs  metrics.rs  muxer.rs  server.rs  transcoder.rs
(+3821 files in other folders)
