[package]
name = "xg2g-transcoder"
version = "1.0.0"
edition = "2021"
authors = ["Manuel"]
description = "High-performance GPU transcoder for xg2g using VAAPI"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http-body-util = "0.1"

# FFmpeg wrapper (neueste Version mit FFmpeg 7.0+ Support)
ac-ffmpeg = "0.19"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
bytes = "1"
futures = "0.3"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Connection pooling
deadpool = "0.12"
async-trait = "0.1"

# Memory allocator - REMOVED due to Tokio runtime incompatibility
# jemalloc conflicts with manual runtime initialization
# For GPU transcoding, performance is GPU/IO bound, not allocation bound
# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
